@@ -2,3 +2,5 @@
 Porno365 - Domain fix
 Chaturbate - listing fix
 xHamster - listing fix
+Chaturbate - Online Favorites fix
+Spankbang - listing fix
